# core

./: .drone.jsonnet  .drone.star  .travis.yml  CMakeLists.txt  README.md  addressof.html  appveyor.yml  build.jam  implicit_cast.cpp  index.html  noncopyable.html  swap.html
.drone/: drone.sh
doc/: Jamfile.v2  addressof.qbk  alloc_construct.qbk  allocator_access.qbk  allocator_traits.qbk  changes.qbk  checked_delete.qbk  core.qbk  data.qbk  default_allocator.qbk  demangle.qbk  empty_value.qbk  enable_if.qbk  explicit_operator_bool.qbk  first_scalar.qbk  ignore_unused.qbk  is_same.qbk  latch.qbk  lightweight_test.qbk  make_span.qbk  max_align.qbk  no_exceptions_support.qbk  noinit_adaptor.qbk  noncopyable.qbk  null_deleter.qbk  nvp.qbk  pointer_in_range.qbk  pointer_traits.qbk  ref.qbk  scoped_enum.qbk  span.qbk  static_assert.qbk  string_view.qbk  swap.qbk  type_name.qbk  typeinfo.qbk
meta/: libraries.json
module/: CMakeLists.txt  core.cppm  usage_sample.cpp
test/: CMakeLists.txt  Jamfile.v2  addressof_fn_test.cpp  addressof_np_test.cpp  addressof_test.cpp  addressof_test2.cpp  alignof_test.cpp  alloc_construct_cxx11_test.cpp  alloc_construct_test.cpp  allocator_allocate_hint_test.cpp  allocator_allocate_test.cpp  allocator_const_pointer_test.cpp  allocator_const_void_pointer_test.cpp  allocator_construct_test.cpp  allocator_deallocate_test.cpp  allocator_destroy_n_test.cpp  allocator_destroy_test.cpp  allocator_difference_type_test.cpp  allocator_is_always_equal_test.cpp  allocator_max_size_test.cpp  allocator_pocca_test.cpp  allocator_pocma_test.cpp  (+151 more)
(+117 files in other folders)
